--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <script src="scripts/script.js"></script>
     <title>Lucas Veríssimo</title>
 </head>
@@ -15,7 +16,7 @@
     </header>
     <main>
         <picture id="home">
-            <img src="img/logo.png" alt="logo" class="vertical-align">
+            <img src="img/300logo_home.png" alt="logo" class="vertical-align" id="logo-home">
         </picture>
         <div></div>
     </main>
