--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <picture id="home">
             <img src="img/300logo_home.png" alt="logo" class="vertical-align" id="logo-home">
         </picture>
-        <div></div>
+        <div id="text-page">
+
+        </div>
     </main>
     <footer>
 
