--- a/index.html
+++ b/index.html
@@ -18,12 +18,34 @@
         <picture id="home">
             <img src="img/300logo_home.png" alt="logo" class="vertical-align" id="logo-home">
         </picture>
-        <div id="text-page">
-
+        <div id="page">
+            <div id="text-page">
+                <h2 class="berkshire">Bem-vindo</h2>
+                <section id="sobre-mim">
+                    <p>
+                        Meu nome é Lucas Veríssimo. Sou um Web Designer apaixonado com programação e esperiência do usuário. Trabalho com ferramentas de ponta como Photoshop, Adobe Premiere, Canva, Illustrator e Adobe XD que deixa a criação do seu site e logo mais bonita e criativa. Tenho vários clientes fidelizados pela qualidade e agilidade na entrega do projeto.
+                    </p>
+                    <p>
+                        Serviços:
+                    </p>
+                    <ul>
+                        <li>Site de alta performance</li>
+                        <li>Logo moderna e criativa</li>
+                        <li>Edição de fotos</li>
+                        <li>Edição de vídeos</li>
+                    </ul>
+                    <p>Entre em contato e faça um orçamento.</p>
+                </section>
+                <img src="img/terno.jpg" alt="terno" id="minha-foto">
+                <h2 class="berkshire">Contato:</h2>
+                <h2 id="telefone" class="contato">Tel: (31) 9 8478-4190</h2>
+                <img src="img/whatsapp.png" alt="Simbolo do Whatsapp" id="whatsapp">
+                <h2 id="email" class="contato">Email: designer.lucasverissimo@gmail.com</h2>
+            </div>
         </div>
     </main>
     <footer>
-
+        
     </footer>
 </body>
 </html>
