Update Imagem + Contato

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <script src="scripts/script.js"></script>
+    
     <title>Lucas Veríssimo</title>
 </head>
 <body>
@@ -16,14 +16,14 @@
     </header>
     <main>
         <picture id="home">
-            <img src="img/300logo_home.png" alt="logo" class="vertical-align" id="logo-home">
+            <img src="img/logo_home.png" alt="logo" class="vertical-align" id="logo-home">
         </picture>
         <div id="page">
             <div id="text-page">
                 <h2 class="berkshire">Bem-vindo</h2>
                 <section id="sobre-mim">
                     <p>
-                        Meu nome é Lucas Veríssimo. Sou um Web Designer apaixonado com programação e esperiência do usuário. Trabalho com ferramentas de ponta como Photoshop, Adobe Premiere, Canva, Illustrator e Adobe XD que deixa a criação do seu site e logo mais bonita e criativa. Tenho vários clientes fidelizados pela qualidade e agilidade na entrega do projeto.
+                        Sou um Web Designer apaixonado com programação e esperiência do usuário. Trabalho com ferramentas de ponta como Photoshop, Adobe Premiere, Canva, Illustrator e Adobe XD que deixa a criação do seu site e logo mais bonita e criativa. Tenho vários clientes fidelizados pela qualidade e agilidade na entrega do projeto.
                     </p>
                     <p>
                         Serviços:
@@ -36,16 +36,20 @@
                     </ul>
                     <p>Entre em contato e faça um orçamento.</p>
                 </section>
-                <img src="img/terno.jpg" alt="terno" id="minha-foto">
+                <img src="img/terno.png" alt="terno" id="minha-foto">
                 <h2 class="berkshire">Contato:</h2>
-                <h2 id="telefone" class="contato">Tel: (31) 9 8478-4190</h2>
-                <img src="img/whatsapp.png" alt="Simbolo do Whatsapp" id="whatsapp">
-                <h2 id="email" class="contato">Email: designer.lucasverissimo@gmail.com</h2>
+                <section id="whatsapp" onclick="clicou()">
+                    <h2 id="telefone" class="contato">Tel: (31) 9 8478-4190</h2>
+                    <img src="img/whatsapp.png" alt="Simbolo do Whatsapp" id="img_whatsapp">
+                </section>
             </div>
         </div>
     </main>
     <footer>
-        
+        <section id="rodape">
+            &copy;2021 Lucas Veríssimo
+        </section>
     </footer>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
