--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 <body>
     <header>
-        Cabeçalho
     </header>
     <main>
         <picture id="home">
@@ -23,7 +22,7 @@
                 <h2 class="berkshire">Bem-vindo</h2>
                 <section id="sobre-mim">
                     <p>
-                        Sou um Web Designer apaixonado com programação e esperiência do usuário. Trabalho com ferramentas de ponta como Photoshop, Adobe Premiere, Canva, Illustrator e Adobe XD que deixa a criação do seu site e logo mais bonita e criativa. Tenho vários clientes fidelizados pela qualidade e agilidade na entrega do projeto.
+                        Sou Desenvolvedor Web apaixonado com programação e esperiência do usuário. Tenho conhecimento avançado em JavaScript, HTML e CSS que faz o site mais responsivo e profissional. Trabalho também com ferramentas de ponta como Photoshop, Adobe Premiere, Canva, Illustrator e Adobe XD deixando a criação do seu site e logo mais bonita e criativa. Tenho vários clientes fidelizados pela qualidade e agilidade na entrega do projeto.
                     </p>
                     <p>
                         Serviços:
