--- a/index.html
+++ b/index.html
@@ -43,15 +43,14 @@
                         </ul>
                     </section>
                 </section>
-                
-                <p>Entre em contato e faça um orçamento.</p>
-
-                <h2 class="berkshire">Contato:</h2>
-                
-                <a href="https://api.whatsapp.com/send?phone=5531984784190" target="_blank" id="whatsapp">
-                    <h2 id="telefone">Tel: (31) 9 8478-4190</h2>
-                    <img src="img/whatsapp.png" alt="Simbolo do Whatsapp" id="img_whatsapp">
-                </a>
+                <section>
+                    <p>Entre em contato e faça um orçamento.</p>
+                    <h2 class="berkshire">Contato:</h2>
+                    <a href="https://api.whatsapp.com/send?phone=5531984784190" target="_blank" id="whatsapp">
+                        <h2 id="telefone">Tel: (31) 9 8478-4190</h2>
+                        <img src="img/whatsapp.png" alt="Simbolo do Whatsapp" id="img_whatsapp">
+                    </a>
+                </section>
             </div>
         </div>
     </main>
