--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </ul>
                     </section>
                 </section>
-                <section>
+                <section id="contato">
                     <p>Entre em contato e faça um orçamento.</p>
                     <h2 class="berkshire">Contato:</h2>
                     <a href="https://api.whatsapp.com/send?phone=5531984784190" target="_blank" id="whatsapp">
