--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="img/logo-pq.png" alt="logo" id="logo-header">
             <nav>
                 <a href="#">HOME</a>
-                <a href="#">PROJETOS</a>
+                <a href="projetos.html">PROJETOS</a>
             </nav>
         </div>
     </header>
