--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/buttons.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Lucas Veríssimo</title>
 </head>
@@ -14,11 +15,16 @@
         <div class="caixa">
             <img src="img/logo-pq.png" alt="logo" id="logo-header">
             <nav>
-                <a href="#">HOME</a>
-                <a href="projetos.html">PROJETOS</a>
+                <a href="#">
+                    <span>HOME</span>
+                </a>
+                <a href="projetos.html">
+                    <span>PROJETOS</span>
+                </a>
             </nav>
         </div>
     </header>
+
     <main>
         <section id="home">
             <img src="img/logo.png" alt="logo" class="vertical-align" id="logo">
