--- a/projetos.html
+++ b/projetos.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/projetos.css">
+    <link rel="stylesheet" href="styles/buttons.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
     <title>Projetos</title>
@@ -16,59 +17,62 @@
         <div class="caixa">
             <img src="img/logo-pq.png" alt="logo" id="logo-header">
             <nav>
-                <a href="index.html">HOME</a>
-                <a href="#">PROJETOS</a>
+                <a href="index.html">
+                    <span>HOME</span>
+                </a>
+                <a href="#">
+                    <span>PROJETOS</span>
+                </a>
             </nav>
         </div>
     </header>
 
     <main>
-        <a href="https://lucas-verissimo.github.io/Site_Barbearia/" target="_blank">
-            <section class="projeto">
-                <h2 class="titulo-projeto">
-                    Site Barbearia
-                </h2>
-                <img src="img/projetos/site_barbearia.PNG" alt="imagem do site barbearia" class="img-projeto">
-                <figcaption class="descricao-projeto">
-                    Site de uma barbearia responsivo e adaptável para mobile. Com menu de interatividade, produtos e formulário de contato.
-                </figcaption>
-            </section>
-        </a>
 
-        <a href="https://lucas-verissimo.github.io/Clone_NetFlix" target="_blank">
-            <section class="projeto">
-                <h2 class="titulo-projeto">
-                    Clone Netflix
-                </h2>
-                <img src="img/projetos/clone_netflix.png" alt="imagem clone netflix" class="img-projeto">
-                <figcaption class="descricao-projeto">
-                    Site de um clone da interface da Netflix usando JQuery para fazer o efeito "Carousel".
-                </figcaption>
-            </section>
-        </a>
-
-        <a href="index.html" target="_blank">
-            <section class="projeto">
-                <h2 class="titulo-projeto">
-                    Este Portifólio
-                </h2>
-                <img src="img/projetos/este_portifolio.PNG" alt="imagem deste portifólio" class="img-projeto">
-                <figcaption class="descricao-projeto">
-                    Portifólio responsivo com vários efeitos no css, como o efeito parallax.
-                </figcaption>
-            </section>
-        </a>
-
-            <section class="projeto">
-                <h2 class="titulo-projeto">
-                    Logo
-                </h2>
-                <img src="img/projetos/logo.png" alt="" class="img-projeto">
-                <figcaption class="descricao-projeto">
-                    Criação de logos minimalistas e criativas
-                </figcaption>
-            </section>
-        
+        <div class="container">
+            <a href="https://lucas-verissimo.github.io/Site_Barbearia/" target="_blank">
+                <section class="projeto">
+                    <h2 class="titulo-projeto">
+                        Site Barbearia
+                    </h2>
+                    <img src="img/projetos/site_barbearia.PNG" alt="imagem do site barbearia" class="img-projeto">
+                    <figcaption class="descricao-projeto">
+                        Site de uma barbearia responsivo e adaptável para mobile. Com menu de interatividade, produtos e formulário de contato.
+                    </figcaption>
+                </section>
+            </a>
+            <a href="https://lucas-verissimo.github.io/Clone_NetFlix" target="_blank">
+                <section class="projeto">
+                    <h2 class="titulo-projeto">
+                        Clone Netflix
+                    </h2>
+                    <img src="img/projetos/clone_netflix.png" alt="imagem clone netflix" class="img-projeto">
+                    <figcaption class="descricao-projeto">
+                        Site de um clone da interface da Netflix usando JQuery para fazer o efeito "Carousel".
+                    </figcaption>
+                </section>
+            </a>
+            <a href="index.html" target="_blank">
+                <section class="projeto">
+                    <h2 class="titulo-projeto">
+                        Este Portifólio
+                    </h2>
+                    <img src="img/projetos/este_portifolio.PNG" alt="imagem deste portifólio" class="img-projeto">
+                    <figcaption class="descricao-projeto">
+                        Portifólio responsivo com vários efeitos no css, como o efeito parallax.
+                    </figcaption>
+                </section>
+            </a>
+                <section class="projeto">
+                    <h2 class="titulo-projeto">
+                        Logo
+                    </h2>
+                    <img src="img/projetos/logo.png" alt="" class="img-projeto">
+                    <figcaption class="descricao-projeto">
+                        Criação de logos minimalistas e criativas
+                    </figcaption>
+                </section>
+        </div>
     </main>
 </body>
 </html>
