--- a/projetos.html
+++ b/projetos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/projetos.css">
     <link rel="stylesheet" href="styles/buttons.css">
+    <link rel="stylesheet" href="styles/responsivo.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
     <title>Projetos</title>
